# pyflex

./: .gitignore  README.md  dummy.py  pyproject.toml
.github/workflows/: pylint.yml
pyflex/: __init__.py  cli.py  flex.py  roast.py  speedrun.py
pyflex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
