[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflex-cli"
version = "0.1.2"
description = "A viral hybrid code-profiler and AI-linter."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "rich>=13.0.0",
    "memory-profiler>=0.61.0",
    "big-O>=0.10.0",
    "typer>=0.9.0"
]

[project.scripts]
pyflex = "pyflex.cli:app"

[tool.setuptools.packages.find]
include = ["pyflex*"]
